[step2] refactor: WinningFinder 중복 코드 제거 및 Arrays.List 코드 수정